@@ -2,6 +2,9 @@ dpkg (1.15.6) UNRELEASED; urgency=low
 
   [ Raphaël Hertzog ]
   * debian/control: Add the accent on my first name.
+  * Perl API cleanup:
+    - rename Dpkg::Deps dump() methods into output([$fh]), overload string
+      representation ("$dep") to provide the result of $dep->output()
 
   [ Guillem Jover ]
   * Handle argument parsing in dpkg-checkbuilddeps and dpkg-scanpackages
